# geany-vala-binding

./: .gitignore  AUTHORS  Makefile  Makefile.am  autogen.sh  configure.ac  geany.vapi  install.sh  regendocs.sh
doc/: Makefile.am
example/: Makefile  gplugin.vala
examples/: Makefile.am  gplugin.vala  signaltest.vala
